src/styles/views/lobby.scss
.lobby{
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-around;

    &__container {
        flex: 0 1 100rem;
        display: grid;
        grid-template-rows: auto 1fr;
        padding: 5rem 0;
        column-gap: 5rem;
        row-gap: 5rem;

        @include respond(lg) {
            padding: 2rem 0;
            row-gap: 2.7rem;
        }
    }

    &__header {
        display: flex;
        flex-direction: row;

        @include respond(lg) {
            flex-wrap: wrap;
            justify-content: center;
        }

        & > *:not(:last-child) {
            margin-right: 2rem;
        }

        & .logo {
            margin-right: auto;

            @include respond(lg) {
                width: 100%;
                text-align: center;
                margin-bottom: 2rem;
                font-size: 4rem;
            }
        }

        .startGame {
            @include respond(xs) {
                margin-right: 1rem;
            }
        }
    }
    
    &__panels {
        height: 100%;
        display: flex;
        justify-content: center;
    }

    &__panel {
        flex: 0 1 55rem;
        &:not(:last-child) {
            margin-right: 5rem;
        }

        background-color: rgba(#fff, 1);
        border-radius: 3rem;
        padding: 3rem;

        display: grid;
        grid-template-rows: auto 1fr;
        grid-auto-rows: min-content;

        & .ant-tabs {
            grid-row: 2 / 3;
            display: flex;
            flex-direction: column;

            &-content {
                flex: 1;
            }
            
            &-tabpane > * {
                height: 100%;
            }

            &-tab {
                color: $color-blue;
                font-size: 2rem;
                font-family: $font-2;
                line-height: 1;
                padding: 0 0 1rem 0;
    
                &:hover,
                &-active {
                    color: $color-purple;
                }
            }

            &-bar {
                margin: 0 0 2rem 0;
                border-color: $color-blue;
            }

            &-ink-bar {
                background-color: $color-purple;
            }
        }
    }

    &__title {
        color: $color-blue;
        font-size: 2rem;
        font-family: $font-2;
        line-height: 1;
        padding-bottom: 1rem;
        border-bottom: 1px solid $color-blue;
        margin-bottom: 2rem;

        display: flex;
        align-items: center;

        & .status {
            margin-left: auto;
            font-size: 1.5rem;
            font-family: $font-1;
            font-weight: 300;
            text-transform: uppercase;

            display: flex;
            align-items: center;
    
            &__spinner {
                margin-left: 1rem;
                line-height: 1;
                font-size: 1rem;
            }
        }
    }
}

